--- a/services.html
+++ b/services.html
@@ -12,7 +12,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Services - Leonard Electric</title>
-    <meta name="" content="">
     <meta name="description" content="Panel &amp; Service Upgrades.LED lighting installation. New home construction.  Home renovations. Service calls. Electrical system maintenance.Installation of new light fixtures.  Chandelier installation. Switches, outlets &amp; dimmers.
 Landscape lighting installation. Low voltage. Ceiling fan installation.
 Home Audio.Sub panel.Troubleshooting, diagnosis &amp; repair.
@@ -274,7 +273,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <div class="text-white p-4 p-md-5">
                                         <h2 class="fw-bold text-white mb-3">We can take care of 100% of your electrical needs.</h2>
                                         <p class="mb-4">With over 15 years of experience, from a small repair to a large custom installation, we've done it all!</p>
-                                        <div class="my-3"><a href="contacts.html"><a class="btn btn-primary btn-lg me-2" role="button" href="#">Learn More</a></a></div>
+                                        <div class="my-3"><a class="btn btn-primary btn-lg me-2" role="button" href="contacts.html">Learn More</a></div>
                                     </div>
                                 </div>
                                 <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img class="w-100 h-100 fit-cover" src="assets/img/servicesimage.png" style="width: 668px;height: 533.797px;margin-top: -1px;padding-top: 0px;padding-left: 24px;"></div>
@@ -370,7 +369,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
-
 
 
 
