--- a/surgeprotector.html
+++ b/surgeprotector.html
@@ -11,8 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WD7TFGW6');</script>
 <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Pricing - Leonard Electric</title>
-    <meta name="" content="">
+    <title>Surge Protection Pricing - Leonard Electric</title>
     <meta name="description" content="Upgrade outdated electrical panels to ensure the utmost safety for your home or business. Our panel upgrade service not only replaces old components but it will increase the capacity to handle modern electrical demands.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/ABeeZee.css">
@@ -92,11 +91,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                             <div>
                                 <ul style="font-size: 12px;" class="list-unstyled">
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span class="font-size: 12px;"><span>Protect Your Sensitive Electronic Equipment from Lightning Strikes.</span></li>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span style="font-size: 12px;">Protect Your Sensitive Electronic Equipment from Lightning Strikes.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span style="font-size: 12px;">Protection Up to $75,000 Worth with a Five-Year Warranty.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span> A One-Time Investment for Long-Term Savings.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Ultimate Safegaurd-Because Your Technology Deserves it!</span></li>
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Protects ALL Devices Connected to the Home's Electrical System. </span></li>                                <ul>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Protects ALL Devices Connected to the Home's Electrical System.</span></li>
+                                </ul>
                             </div>
                                         
                                         <a style="padding: 20px;" href="contacts.html">
@@ -104,7 +104,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     Get started today.
                 </button>
             </a>                          
-                            </p>
                         </div>
                     </div>
                 </div>
