--- a/Lighting.html
+++ b/Lighting.html
@@ -11,9 +11,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WD7TFGW6');</script>
 <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Hot Tubs, Pools &amp; Sauna</title>
-    <meta name="" content="">
-    <meta name="description" content="Relax and unwind in style with our flawless hot tub installation services">
+    <title>Interior &amp; Exterior Lighting - Leonard Electric</title>
+    <meta name="description" content="Professional interior and exterior lighting installation services, including smart lighting, security lighting, and seasonal lighting.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/ABeeZee.css">
     <link rel="stylesheet" href="assets/css/Aclonica.css">
@@ -66,7 +65,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="nav-item"><a class="nav-link" href="electricalrepairs.html" style="text-align: center;padding: 8px 8px;">Electrical Repair</a></li>
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
+                    <li class="nav-item"><a class="nav-link" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
                     <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
@@ -78,7 +77,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Hero Section -->
     <div class="hero py-5 text-center" style="background-color: #2d2d2d;">  
         <h1>Interior & Exterior Lighting Services</h1>
-        <p <p style="font-size: 2rem; font-weight: bold; Brighten Your Home, Illuminate Your Outdoors</p>
+        <p style="font-size: 2rem; font-weight: bold;">Brighten Your Home, Illuminate Your Outdoors</p>
     </div>
 <!-- Main Content -->
 <main>
@@ -97,7 +96,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </ul>
         </div>
     </section>
-</main>
         <!-- Professional Interior Lighting Installations -->
         <section class="py-5 bg-light" style="background-color: #2d2d2d;color: #000000;">
             <div class="container text-center">
@@ -184,11 +182,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
     </main>
 
-                      </div>
-                </div>
-            </div>
-        </div>
-    </div><footer class="bg-dark text-white" style="font-family: Inter, sans-serif; width: 100%; padding: 30px; margin: 20px;">
+<footer class="bg-dark text-white" style="font-family: Inter, sans-serif; width: 100%; padding: 30px; margin: 20px;">
     <div class="row g-0 justify-content-center">
         <!-- Services Section -->
         <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
