--- a/generlink.html
+++ b/generlink.html
@@ -11,9 +11,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WD7TFGW6');</script>
 <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Hot Tubs, Pools &amp; Sauna</title>
-    <meta name="" content="">
-    <meta name="description" content="Relax and unwind in style with our flawless hot tub installation services">
+    <title>GenerLink Transfer Switch - Leonard Electric</title>
+    <meta name="description" content="GenerLink transfer switch solutions for safe and convenient backup generator connection to your home.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/ABeeZee.css">
     <link rel="stylesheet" href="assets/css/Aclonica.css">
@@ -66,7 +65,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="nav-item"><a class="nav-link" href="electricalrepairs.html" style="text-align: center;padding: 8px 8px;">Electrical Repair</a></li>
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
+                    <li class="nav-item"><a class="nav-link" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
                     <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
@@ -96,8 +95,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/generlink_Home
-" alt="Slide Image" style="z-index: -1;">
+                <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/generlink_Home" alt="Slide Image" style="z-index: -1;">
                     <div class="container d-flex flex-column justify-content-center h-100">
                         <div class="row">
                             <div class="col-md-6 col-xl-4 offset-md-2">
@@ -166,10 +164,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         </svg></span><span style="color: rgb(32,102,208);">Seamless Integration:Connect without rewiring.</span></li>
                                 <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg></span><span>No accidental power surges.</span></li
+                                        </svg></span><span>No accidental power surges.</span></li>
         
                             </ul>
-                        </div><a href="contacts.html"><a class="btn btn-primary d-block w-100" role="button" href="#">Get Started</a></a>
+                        </div><a class="btn btn-primary d-block w-100" role="button" href="contacts.html">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -189,7 +187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <li class="d-flex mb-2"></li>
                                 <li class="d-flex mb-2" style="padding-bottom: 0px;margin-bottom: 14px;margin-top: 0px;"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 14px;">Efficient and Timely Service.</span></li>
                             </ul>
-                        </div><a href="contacts.html"><a class="btn btn-primary d-block w-100 bg-white-300" role="button" href="contacts.html">Learn More</a></a>
+                        </div><a class="btn btn-primary d-block w-100 bg-white-300" role="button" href="contacts.html">Learn More</a>
                                 </div>
                 </div>
             </div>
