--- a/hottubs.html
+++ b/hottubs.html
@@ -12,7 +12,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Hot Tubs, Pools &amp; Sauna</title>
-    <meta name="" content="">
     <meta name="description" content="Relax and unwind in style with our flawless hot tub installation services, bringing ultimate indulgence to your home. Full electrical installation and customizable solutions for your hot tub, pool and sauna systems.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/ABeeZee.css">
@@ -179,7 +178,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
                                         </svg></span><span>Ensured Safety and Compliance Standards.</span></li>
                             </ul>
-                        </div><a href="contacts.html"><a class="btn btn-primary d-block w-100" role="button" href="#">Get Started</a></a>
+                        </div><a class="btn btn-primary d-block w-100" role="button" href="contacts.html">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -203,7 +202,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <li class="d-flex mb-2"></li>
                                 <li class="d-flex mb-2" style="padding-bottom: 0px;margin-bottom: 14px;margin-top: 0px;"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 14px;">Efficient and Timely Service.</span></li>
                             </ul>
-                        </div><a href="contacts.html"><a class="btn btn-primary d-block w-100 bg-white-300" role="button" href="contacts.html">Learn More</a></a>
+                        </div><a class="btn btn-primary d-block w-100 bg-white-300" role="button" href="contacts.html">Learn More</a>
                     </div>
                 </div>
             </div>
