fix(tracking): set Google Ads conversion label for contact form

--- a/contacts.html
+++ b/contacts.html
@@ -310,7 +310,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       }
 
       const GOOGLE_ADS_CONVERSION_ID = 'AW-11310801752';
-      const GOOGLE_ADS_CONVERSION_LABEL = '';
+      const GOOGLE_ADS_CONVERSION_LABEL = 'XdE4CLGq3-IYENjGtJEq';
 
       form.addEventListener('submit', async function(event) {
         event.preventDefault();
