--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -204,6 +204,7 @@
 </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bold-and-dark.js"></script>
 </body>
 
 </html>
